# Soilphia

./: README.md  pyproject.toml
notes/: richard_equation.md  soil-water-simulation.md
