[tool.poetry]
name = "soilphia"
version = "0.1.0"
description = "A Soil-water model for agriculture"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
